# rustopedia

./: .gitignore  Cargo.toml  DESIGN.md  HANDOFF.md  MANUAL_TESTS.md  MEMORY_MAPPER.md  MODES.md  README.md  SMALLCODE_ADOPTION.md  TODO.md
chroma_db/431b1ea0-1510-4ecc-9a2c-6a42652878cf/: index_metadata.pickle
rag/: crate_docs.sh  embed_docs.py  embed_docs_qdrant.py  embed_query.py  extract_docs_from_html.py  extract_rust_docs.py  fetch_docsrs.py  print_chroma_collections.py  query_rag.sh  rag_server.py  requirements.txt  rustup_docs.sh
sample_docs/rust-book/: SUMMARY.md  appendix-00.md  appendix-01-keywords.md  appendix-02-operators.md  appendix-03-derivable-traits.md  appendix-04-macros.md  appendix-04-useful-development-tools.md  appendix-05-editions.md  appendix-05-translation.md  appendix-06-newest-features.md  appendix-06-translation.md  appendix-07-nightly-rust.md  associated-types.md  attributes.md  bibliography.md  borrow-and-asref.md  casting-between-types.md  ch00-00-introduction.md  ch01-00-getting-started.md  ch01-01-installation.md  ch01-02-hello-world.md  ch01-03-hello-cargo.md  ch02-00-guessing-game-tutorial.md  ch03-00-common-programming-concepts.md  ch03-01-variables-and-mutability.md  ch03-02-data-types.md  ch03-03-how-functions-work.md  ch03-04-comments.md  ch03-05-control-flow.md  ch04-00-understanding-ownership.md  ch04-01-what-is-ownership.md  (+173 more)
src/: cli.rs  config.rs  generate_prompt.rs  intents.rs  llm.rs  main.rs  memory.rs  model_profile.rs  patch.rs  planner.rs  retry_loop.rs  router_llm.rs  runtime.rs  scratch.rs  session.rs  utils.rs
(+1643 files in other folders)
