[package]
name = "rustopedia"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.16", features = ["blocking", "json"] }
urlencoding = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettyprint = "0.8.1"
regex = "1.11.1"
tokio = { version = "1", features = ["full"] }
scraper = "0.23"
chromadb = "2.3.0"
qdrant-client = "1.12.0"
